<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddNoteActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:background="#0000"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_camera" />

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/note"
        android:padding="12dp" />

    <Button
        android:id="@+id/buttonAddLocation"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="#fff"
        android:elevation="4dp"
        android:gravity="start|center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/add_location"
        android:textColor="#000"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="#fff"
        android:padding="12dp"
        android:text="@string/time"
        android:textColor="#000"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/editTextAboutNote"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/is_there_anything"
        android:padding="12dp"
        tools:ignore="Autofill,TextFields" />


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="#fff"
        android:elevation="4dp"
        android:text="@string/save"
        android:textColor="#000"
        tools:ignore="UnusedAttribute" />
</LinearLayout>